--- a/FrontChama/html/tec_faq.html
+++ b/FrontChama/html/tec_faq.html
@@ -88,6 +88,7 @@
     </div>
 
     <!-- Modal -->
+     
     <div class="modal" id="modalChamado">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -97,10 +98,14 @@
             <p><strong>Status:</strong> <span id="modalStatus"></span></p>
             <p><strong>Descrição:</strong> <span id="modalDescricao"></span></p>
             <p><strong>Técnico responsável:</strong> <span id="modalTecnico"></span></p>
-            <textarea id="modalObservacao" placeholder="Adicione observações sobre o atendimento..."></textarea>
-            <button id="btnToggleStatus" class="btn-chamado"></button>
-        </div>
+
+             <div class="flex justify-center mt-4">
+              <button id="btnToggleStatus" class="btn-chamado"></button>
     </div>
+
+  </div>
+</div>
+
 
     <!-- botão flutuante -->
     <button id="chatToggle" class="fixed bottom-6 right-6 bg-[#3B82F6] text-white rounded-full w-14 h-14 flex items-center justify-center shadow-lg hover:bg-[#1E40AF] transition z-50">
