--- a/FrontChama/html/login.html
+++ b/FrontChama/html/login.html
@@ -69,13 +69,18 @@
             <div class="relative w-full mb-6">
                 <input type="password" id="senha" placeholder="Digite a sua senha..."
                        class="w-full p-3 bg-[#EDEDED] rounded-md outline-none transition-all pr-10" />
+                       
+                <!--Mostrar/Ocultar senha-->
                 <button type="button" id="toggleSenha"
+                    aria-label="Alternar visibilidade da senha"
                         class="absolute right-3 top-1/2 transform -translate-y-1/2 text-[#2F374C] hidden">
-                    <svg id="iconSenha" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
-                         stroke="#2F374C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M1 1l18 18M10 10a3 3 0 0 1 3 3m0 0a3 3 0 0 1-3 3m0 0a3 3 0 0 1-3-3m0 0a3 3 0 0 1 3-3" />
-                    </svg>
+                     <svg id="iconSenha" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
+                       stroke="#2F374C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M1 10s4-7 9-7 9 7 9 7-4 7-9 7-9-7-9-7z"/>
+                        <circle cx="10" cy="10" r="3"/>
+                     </svg>
                 </button>
+
                 <p id="erroSenha" class="text-red-500 text-sm mt-1 hidden">Preencha a senha</p>
             </div>
 
