--- a/FrontChama/html/perfil.html
+++ b/FrontChama/html/perfil.html
@@ -41,7 +41,11 @@
             <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
             <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
             <li class="active"><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
-            <li><a href="#" onclick="abrirModalSaida()"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
+            <li>
+                    <a href="javascript:void(0)" onclick="abrirModalSaida()">
+                        <i class="fa-solid fa-clipboard-list"></i> Sair
+                    </a>
+                </li>
         </ul>
     </aside>
 
@@ -56,9 +60,6 @@
             <form class="perfil-form">
                 <label>Nome Completo:</label>
                 <input type="text" disabled>
-
-                <label>E-mail:</label>
-                <input type="email" disabled>
 
                 <label>Funcional:</label>
                 <input type="text" placeholder="Digite seu funcional">
@@ -92,6 +93,7 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
+    // --- dados e formulario ---
     const form = document.querySelector('.perfil-form');
     const usuario = JSON.parse(sessionStorage.getItem('usuarioLogado'));
 
@@ -101,83 +103,149 @@ document.addEventListener('DOMContentLoaded', () => {
         return;
     }
 
-    const nomeInput = form.querySelector('input[type="text"]');
-    const emailInput = form.querySelector('input[type="email"]');
-    const funcionalInput = form.querySelector('input[placeholder="Digite seu funcional"]');
-    const novaSenhaInput = form.querySelector('input[placeholder="Digite sua nova senha"]');
-    const confirmaSenhaInput = form.querySelector('input[placeholder="Confirme sua nova senha"]');
+    // Seleções seguras (pode faltar algum input na tela; não vamos quebrar o script)
+    const nomeInput = form ? form.querySelector('input[type="text"]') : null;
+    const emailInput = form ? form.querySelector('input[type="email"]') : null;
+    const funcionalInput = form ? form.querySelector('input[placeholder="Digite seu funcional"]') : null;
+    const novaSenhaInput = form ? form.querySelector('input[placeholder="Digite sua nova senha"]') : null;
+    const confirmaSenhaInput = form ? form.querySelector('input[placeholder="Confirme sua nova senha"]') : null;
 
-    nomeInput.value = usuario.nome_usuario || 'Usuário';
-    emailInput.value = usuario.email || '';
-    funcionalInput.value = '';
+    if (nomeInput) nomeInput.value = usuario.nome_usuario || 'Usuário';
+    if (emailInput) emailInput.value = usuario.email || '';
+    if (funcionalInput) funcionalInput.value = usuario.funcional || '';
 
-    form.addEventListener('submit', async e => {
-        e.preventDefault();
+    // Submit do formulário com validações defensivas
+    if (form) {
+        form.addEventListener('submit', async e => {
+            e.preventDefault();
 
-        if (!funcionalInput.value.trim()) {
-            alert('Informe seu funcional.');
-            return;
-        }
-
-        if (novaSenhaInput.value.trim() !== confirmaSenhaInput.value.trim()) {
-            alert('A nova senha e a confirmação não coincidem.');
-            return;
-        }
-
-        const payload = {
-            Nome_usuario: usuario.nome_usuario,
-            Funcional: funcionalInput.value.trim(),
-            Senha: novaSenhaInput.value.trim(),
-            Tipo_usuario: usuario.tipo_usuario,
-            Id_setor: usuario.id_setor
-        };
-
-        try {
-            const response = await fetch(`https://localhost:7271/api/v1/Usuario/${usuario.id_usuario}`, {
-                method: 'PUT',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(payload)
-            });
-
-            if (response.ok) {
-                alert('Senha alterada com sucesso!');
-                usuario.senha = novaSenhaInput.value.trim();
-                usuario.funcional = funcionalInput.value.trim();
-                sessionStorage.setItem('usuarioLogado', JSON.stringify(usuario));
-                novaSenhaInput.value = '';
-                confirmaSenhaInput.value = '';
-                funcionalInput.value = '';
-            } else {
-                const error = await response.text();
-                alert('Erro ao alterar senha: ' + error);
+            if (!funcionalInput) {
+                alert('Campo funcional não encontrado no formulário.');
+                return;
             }
-        } catch (err) {
-            console.error(err);
-            alert('Erro ao conectar com o servidor.');
-        }
-    });
 
-    // Modal de saída
+            if (!funcionalInput.value.trim()) {
+                alert('Informe seu funcional.');
+                return;
+            }
+
+            if (!novaSenhaInput || !confirmaSenhaInput) {
+                alert('Campos de senha não encontrados.');
+                return;
+            }
+
+            if (novaSenhaInput.value.trim() !== confirmaSenhaInput.value.trim()) {
+                alert('A nova senha e a confirmação não coincidem.');
+                return;
+            }
+
+            const payload = {
+                Nome_usuario: usuario.nome_usuario,
+                Funcional: funcionalInput.value.trim(),
+                Senha: novaSenhaInput.value.trim(),
+                Tipo_usuario: usuario.tipo_usuario,
+                Id_setor: usuario.id_setor
+            };
+
+            try {
+                const response = await fetch(`https://localhost:7271/api/v1/Usuario/${usuario.id_usuario}`, {
+                    method: 'PUT',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(payload)
+                });
+
+                if (response.ok) {
+                    alert('Senha alterada com sucesso!');
+                    usuario.senha = novaSenhaInput.value.trim();
+                    usuario.funcional = funcionalInput.value.trim();
+                    sessionStorage.setItem('usuarioLogado', JSON.stringify(usuario));
+                    novaSenhaInput.value = '';
+                    confirmaSenhaInput.value = '';
+                    funcionalInput.value = '';
+                } else {
+                    const error = await response.text();
+                    alert('Erro ao alterar senha: ' + error);
+                }
+            } catch (err) {
+                console.error(err);
+                alert('Erro ao conectar com o servidor.');
+            }
+        });
+    }
+
+    // --- Modal de saída (robusto) ---
     const modalConfirm = document.getElementById('modalConfirm');
     const btnConfirmarSair = document.getElementById('btnConfirmarSair');
     const btnCancelarSair = document.getElementById('btnCancelarSair');
+    // seleciona o link "Sair" que tem onclick no HTML (fallback caso queira manter o onclick)
+    const btnAbrirModalSair = document.querySelector('a[onclick="abrirModalSaida()"]');
 
-    window.abrirModalSaida = () => {
+    const abrirModalSaidaLocal = () => {
+        if (!modalConfirm) {
+            console.error('Modal não encontrado no DOM.');
+            return;
+        }
         modalConfirm.style.display = 'flex';
+        // opcional: bloquear scroll da página enquanto modal aberto
+        document.body.style.overflow = 'hidden';
+        // colocar foco no botão cancelar para acessibilidade
+        if (btnCancelarSair) btnCancelarSair.focus();
     };
 
-    const fecharModalSaida = () => {
+    const fecharModalSaidaLocal = () => {
+        if (!modalConfirm) return;
         modalConfirm.style.display = 'none';
+        document.body.style.overflow = ''; // restaura scroll
     };
 
-    btnConfirmarSair.addEventListener('click', () => {
-        sessionStorage.removeItem('usuarioLogado');
-        window.location.href = '../html/home.html';
-    });
+    // expõe a função global com o mesmo nome do seu HTML (se quiser manter onclick)
+    window.abrirModalSaida = () => abrirModalSaidaLocal();
 
-    btnCancelarSair.addEventListener('click', fecharModalSaida);
+    // abre pelo link (evita o comportamento default do href)
+    if (btnAbrirModalSair) {
+        btnAbrirModalSair.addEventListener('click', (e) => {
+            e.preventDefault();
+            abrirModalSaidaLocal();
+        });
+    }
+
+    // abre via chamada direta (caso algum outro código chame abrirModalSaida())
+    // já feito acima com window.abrirModalSaida
+
+    // confirmar sair: limpa session e redireciona
+    if (btnConfirmarSair) {
+        btnConfirmarSair.addEventListener('click', () => {
+            sessionStorage.removeItem('usuarioLogado');
+            // redireciona para a home
+            window.location.href = '../html/home.html';
+        });
+    } else {
+        console.warn('Botão confirmar sair não encontrado (id="btnConfirmarSair").');
+    }
+
+    // cancelar
+    if (btnCancelarSair) {
+        btnCancelarSair.addEventListener('click', fecharModalSaidaLocal);
+    } else {
+        console.warn('Botão cancelar sair não encontrado (id="btnCancelarSair").');
+    }
+
+    // fecha ao clicar fora do conteúdo do modal
+    if (modalConfirm) {
+        modalConfirm.addEventListener('click', (e) => {
+            if (e.target === modalConfirm) fecharModalSaidaLocal();
+        });
+    }
+
+    // fecha com ESC
+    document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape') {
+            fecharModalSaidaLocal();
+        }
+    });
 });
 </script>
+
 
 </body>
 </html>
