--- a/FrontChama/html/relatorio.html
+++ b/FrontChama/html/relatorio.html
@@ -37,7 +37,9 @@
       </nav>
 
       <div class="profile-area" title="Perfil">
-        <i class="fa-solid fa-user-circle"></i>
+        <a href="tec_perfil.html">
+          <i class="fa-solid fa-user-circle"></i>
+        </a>
       </div>
     </div>
   </header>
@@ -47,21 +49,29 @@
     <!-- SIDEBAR -->
     <aside class="sidebar">
       <ul>
-        <li><a href="tec_faq.html"><i class="fa-solid fa-headset"></i> Central de Chamados</a></li>
-        <li class="active"><a href="relatorio.html"><i class="fa-solid fa-chart-simple"></i> Relatórios</a></li>
-        <li><a href="tec_perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
         <li>
-                    <a href="#" id="btnSair">
-                        <i class="fa-solid fa-clipboard-list"></i> Sair
-                    </a>
-                </li>
+          <a href="tec_faq.html"><i class="fa-solid fa-headset"></i> Central de Chamados</a>
+        </li>
+        <li class="active">
+          <a href="relatorio.html"><i class="fa-solid fa-chart-simple"></i> Relatórios</a>
+        </li>
+        <li>
+          <a href="tec_perfil.html"><i class="fa-solid fa-user"></i> Perfil</a>
+        </li>
+        <li>
+          <a href="#" id="btnSair">
+            <i class="fa-solid fa-clipboard-list"></i> Sair
+          </a>
+        </li>
       </ul>
     </aside>
 
     <!-- CONTEÚDO -->
     <main class="page">
 
-      <h1 class="hero-title"><i class="fa-solid fa-chart-line"></i> Relatórios de Chamados</h1>
+      <h1 class="hero-title">
+        <i class="fa-solid fa-chart-line"></i> Relatórios de Chamados
+      </h1>
 
       <!-- FILTROS -->
       <div class="filtros-wrapper mb-4">
@@ -119,61 +129,61 @@
 
       <!-- Botões -->
       <div class="export-buttons">
-        <button id="btnPdf" class="export pdf"><i class="fa-solid fa-file-pdf"></i> Exportar PDF</button>
-        <button id="btnExcel" class="export excel"><i class="fa-solid fa-file-excel"></i> Exportar Excel</button>
+        <button id="btnPdf" class="export pdf">
+          <i class="fa-solid fa-file-pdf"></i> Exportar PDF
+        </button>
+        <button id="btnExcel" class="export excel">
+          <i class="fa-solid fa-file-excel"></i> Exportar Excel
+        </button>
       </div>
 
     </main>
   </div>
-    <!-- MODAL DE CONFIRMAÇÃO DE SAÍDA -->
-<div id="modalConfirm" class="modalSair">
-  <div class="modalSair-content text-center">
-    <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
-    <div class="flex justify-center gap-4">
-      <button id="btnConfirmarSair" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition">Sair</button>
-      <button id="btnCancelarSair" class="bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-600 transition">Cancelar</button>
+
+  <!-- MODAL DE CONFIRMAÇÃO DE SAÍDA -->
+  <div id="modalConfirm" class="modalSair">
+    <div class="modalSair-content text-center">
+      <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
+      <div class="flex justify-center gap-4">
+        <button id="btnConfirmarSair" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition">Sair</button>
+        <button id="btnCancelarSair" class="bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-600 transition">Cancelar</button>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- JS DO MODAL (CORRIGIDO) -->
-<script>
-  const modalConfirm = document.getElementById('modalConfirm');
-  const btnConfirmarSair = document.getElementById('btnConfirmarSair'); // ✅ ID certo
-  const btnCancelarSair = document.getElementById('btnCancelarSair');
-  const btnSair = document.getElementById('btnSair');
+  <!-- JS DO MODAL (CORRIGIDO) -->
+  <script>
+    const modalConfirm = document.getElementById('modalConfirm');
+    const btnConfirmarSair = document.getElementById('btnConfirmarSair');
+    const btnCancelarSair = document.getElementById('btnCancelarSair');
+    const btnSair = document.getElementById('btnSair');
 
-  btnSair.addEventListener('click', (e) => {
-    e.preventDefault();
-    modalConfirm.style.display = 'flex';
-  });
+    btnSair.addEventListener('click', (e) => {
+      e.preventDefault();
+      modalConfirm.style.display = 'flex';
+    });
 
-  function fecharModalSaida() {
-    modalConfirm.style.display = 'none';
-  }
-
-  btnConfirmarSair.addEventListener('click', () => {
-    sessionStorage.removeItem('tecnicoLogado');
-
-    // Se quiser voltar pro login, use esse caminho no lugar:
-    window.location.href = 'login.html'; // 👈 se quiser ir pro login
-    // ou mantém:
-    // window.location.href = '../html/home.html';
-  });
-
-  btnCancelarSair.addEventListener('click', fecharModalSaida);
-
-  window.addEventListener('click', (e) => {
-    if (e.target === modalConfirm) {
-      fecharModalSaida();
+    function fecharModalSaida() {
+      modalConfirm.style.display = 'none';
     }
-  });
-</script>
+
+    btnConfirmarSair.addEventListener('click', () => {
+      sessionStorage.removeItem('tecnicoLogado');
+      window.location.href = 'login.html';
+    });
+
+    btnCancelarSair.addEventListener('click', fecharModalSaida);
+
+    window.addEventListener('click', (e) => {
+      if (e.target === modalConfirm) {
+        fecharModalSaida();
+      }
+    });
+  </script>
+
   <footer class="site-footer">
     <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
   </footer>
-
-
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -189,5 +199,6 @@
 
   <!-- JS -->
   <script src="../js/relatorio.js"></script>
+
 </body>
 </html>
