--- a/FrontChama/html/atividades.html
+++ b/FrontChama/html/atividades.html
@@ -13,143 +13,279 @@
 </head>
 <body>
 
-<header class="site-header">
-    <div class="header-inner">
-        <div class="brand">
-            <img src="../assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
-            <span class="brand-title">Chama Fácil</span>
+    <header class="site-header">
+        <div class="header-inner">
+            <div class="brand">
+                <img src="../assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
+                <span class="brand-title">Chama Fácil</span>
+            </div>
+            <nav class="main-nav" aria-label="Menu principal">
+                <a href="faq.html" class="nav-link">Central de Soluções</a>
+                <a href="artigos.html" class="nav-link">Artigos & Documentos</a>
+            </nav>
+            <div class="profile-area" title="Perfil">
+                <a href="perfil.html">
+                    <i class="fa-solid fa-user-circle"></i>
+                </a>
+            </div>
         </div>
-        <nav class="main-nav" aria-label="Menu principal">
-            <a href="faq.html" class="nav-link">Central de Soluções</a>
-            <a href="artigos.html" class="nav-link">Artigos & Documentos</a>
-        </nav>
-        <div class="profile-area" title="Perfil">
-            <a href="perfil.html"><i class="fa-solid fa-user-circle"></i></a>
+    </header>
+
+    <div class="layout">
+        <aside class="sidebar">
+            <ul>
+                <li>
+                    <a href="atividades.html">
+                        <i class="fa-solid fa-list-check"></i> Minhas Atividades
+                    </a>
+                </li>
+                <li>
+                    <a href="chamados.html">
+                        <i class="fa-solid fa-headset"></i> Chamados
+                    </a>
+                </li>
+                <li>
+                    <a href="perfil.html">
+                        <i class="fa-solid fa-user"></i> Perfil
+                    </a>
+                </li>
+                <li>
+                    <a href="#" onclick="abrirModalSaida()">
+                        <i class="fa-solid fa-clipboard-list"></i> Sair
+                    </a>
+                </li>
+            </ul>
+        </aside>
+
+        <main class="page">
+            <h1 class="hero-title">Minhas Atividades</h1>
+
+            <section class="cards-dashboard">
+                <div class="info-card">
+                    <i class="fa-solid fa-headset"></i>
+                    <div>
+                        <h3>Chamados em Aberto</h3>
+                        <p id="countAbertos">0 chamados</p>
+                    </div>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-check-circle"></i>
+                    <div>
+                        <h3>Concluídos</h3>
+                        <p id="countConcluidos">0 resolvidos</p>
+                    </div>
+                </div>
+                <div class="info-card">
+                    <i class="fa-solid fa-clock"></i>
+                    <div>
+                        <h3>Pendentes</h3>
+                        <p id="countPendentes">0 pendentes</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="recent-activity">
+                <h2>Atividades Recentes</h2>
+                <ul id="listaRecentes"></ul>
+            </section>
+        </main>
+    </div>
+
+    <!-- botão e chat flutuante -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <button id="chatToggle" class="fixed bottom-6 right-6 bg-[#3B82F6] text-white rounded-full w-14 h-14 flex items-center justify-center shadow-lg hover:bg-[#1E40AF] transition z-50">
+        💬
+    </button>
+
+    <div id="chatModal" class="hidden fixed bottom-20 right-6 w-[380px] max-w-[90%] bg-white rounded-2xl shadow-xl flex flex-col overflow-hidden border border-gray-200 z-50">
+        <header class="flex items-center justify-between bg-[#2F374C] text-white p-3">
+            <div class="flex items-center gap-3">
+                <img src="../assets/zehelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
+                <div>
+                    <h1 class="text-sm font-semibold leading-none">Zé Help</h1>
+                    <p class="text-xs opacity-80">Ajudante do Chama Fácil</p>
+                </div>
+            </div>
+            <button id="closeChat" class="text-lg font-bold hover:text-red-400 transition">×</button>
+        </header>
+        <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
+            <div class="msg flex items-end gap-2">
+                <img src="../assets/zehelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
+                <div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">
+                    Oi! Sou o Zé Help 😄 Como posso te ajudar hoje?
+                </div>
+            </div>
+        </main>
+        <div class="flex items-center gap-2 border-t border-gray-200 p-2 bg-white">
+            <input id="userInput" type="text" placeholder="Digite sua mensagem..." class="flex-1 border border-gray-300 rounded-full px-3 py-1.5 text-sm focus:outline-none focus:ring-2 focus:ring-[#3B82F6]">
+            <button id="sendBtn" class="bg-[#3B82F6] text-white px-4 py-1.5 rounded-full text-sm hover:bg-[#1E40AF] transition">
+                Enviar
+            </button>
         </div>
     </div>
-</header>
 
-<div class="layout">
-    <aside class="sidebar">
-        <ul>
-            <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
-            <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
-            <li><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
-            <li><a href="#" onclick="abrirModalSaida()"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
-        </ul>
-    </aside>
-
-    <main class="page">
-        <h1 class="hero-title">Minhas Atividades</h1>
-
-        <section class="cards-dashboard">
-            <div class="info-card">
-                <i class="fa-solid fa-headset"></i>
-                <div>
-                    <h3>Chamados em Aberto</h3>
-                    <p id="countAbertos">0 chamados</p>
-                </div>
+    <!-- Modal de saída padronizado -->
+    <div id="modalConfirm" class="modal">
+        <div class="modal-content text-center">
+            <h2>Tem certeza que deseja sair?</h2>
+            <div class="flex justify-center gap-4">
+                <button id="btnConfirmarSair" class="btn-sair">Sair</button>
+                <button id="btnCancelarSair" class="btn-fechar">Cancelar</button>
             </div>
-            <div class="info-card">
-                <i class="fa-solid fa-check-circle"></i>
-                <div>
-                    <h3>Concluídos</h3>
-                    <p id="countConcluidos">0 resolvidos</p>
-                </div>
-            </div>
-            <div class="info-card">
-                <i class="fa-solid fa-clock"></i>
-                <div>
-                    <h3>Pendentes</h3>
-                    <p id="countPendentes">0 pendentes</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="recent-activity">
-            <h2>Atividades Recentes</h2>
-            <ul id="listaRecentes"></ul>
-        </section>
-    </main>
-</div>
-
-<!-- Modal de saída padronizado -->
-<div id="modalConfirm" class="modal">
-    <div class="modal-content text-center">
-        <h2>Tem certeza que deseja sair?</h2>
-        <div class="flex justify-center gap-4">
-            <button id="btnConfirmarSair" class="btn-sair">Sair</button>
-            <button id="btnCancelarSair" class="btn-fechar">Cancelar</button>
         </div>
     </div>
-</div>
 
-<script>
-const usuario = JSON.parse(sessionStorage.getItem("usuarioLogado"));
-if (!usuario) {
-    alert("Sessão expirada! Faça login novamente.");
-    window.location.href = "home.html";
-}
+    <script>
+        const usuario = JSON.parse(sessionStorage.getItem("usuarioLogado"));
+        if (!usuario) {
+            alert("Sessão expirada! Faça login novamente.");
+            window.location.href = "home.html";
+        }
 
-async function carregarAtividades() {
-    try {
-        const response = await fetch("https://localhost:7271/api/v1/Chamado");
-        const chamados = await response.json();
+        async function carregarAtividades() {
+            try {
+                const response = await fetch("https://localhost:7271/api/v1/Chamado");
+                const chamados = await response.json();
 
-        const meusChamados = chamados.filter(c => c.id_usuario === usuario.id_usuario);
+                const meusChamados = chamados.filter(c => c.id_usuario === usuario.id_usuario);
 
-        const abertos = meusChamados.filter(c => c.status.toLowerCase() === "em-andamento").length;
-        const pendentes = meusChamados.filter(c => c.status.toLowerCase() === "pendente").length;
-        const concluidos = meusChamados.filter(c => c.status.toLowerCase() === "concluido" || c.status.toLowerCase() === "concluído").length;
+                const abertos = meusChamados.filter(c => c.status.toLowerCase() === "em-andamento").length;
+                const pendentes = meusChamados.filter(c => c.status.toLowerCase() === "pendente").length;
+                const concluidos = meusChamados.filter(c =>
+                    c.status.toLowerCase() === "concluido" ||
+                    c.status.toLowerCase() === "concluído"
+                ).length;
 
-        document.getElementById("countAbertos").textContent = `${abertos} em andamento`;
-        document.getElementById("countPendentes").textContent = `${pendentes} pendentes`;
-        document.getElementById("countConcluidos").textContent = `${concluidos} resolvidos`;
+                document.getElementById("countAbertos").textContent = `${abertos} em andamento`;
+                document.getElementById("countPendentes").textContent = `${pendentes} pendentes`;
+                document.getElementById("countConcluidos").textContent = `${concluidos} resolvidos`;
 
-        const lista = document.getElementById("listaRecentes");
-        lista.innerHTML = "";
+                const lista = document.getElementById("listaRecentes");
+                lista.innerHTML = "";
 
-        const recentes = meusChamados
-            .sort((a,b) => new Date(b.data_abertura) - new Date(a.data_abertura))
-            .slice(0,3);
+                const recentes = meusChamados
+                    .sort((a, b) => new Date(b.data_abertura) - new Date(a.data_abertura))
+                    .slice(0, 3);
 
-        recentes.forEach(c => {
-            const icone = c.status.toLowerCase() === "concluido" || c.status.toLowerCase() === "concluído"
-                ? "fa-check-circle"
-                : c.status.toLowerCase() === "pendente"
-                ? "fa-clock"
-                : "fa-headset";
+                recentes.forEach(c => {
+                    const icone =
+                        c.status.toLowerCase() === "concluido" || c.status.toLowerCase() === "concluído"
+                            ? "fa-check-circle"
+                            : c.status.toLowerCase() === "pendente"
+                            ? "fa-clock"
+                            : "fa-headset";
 
-            const li = document.createElement("li");
-            li.innerHTML = `<i class="fa-solid ${icone}"></i> Chamado #${c.numero_chamado} — <em>${c.descricao}</em>`;
-            lista.appendChild(li);
+                    const li = document.createElement("li");
+                    li.innerHTML = `<i class="fa-solid ${icone}"></i> Chamado #${c.numero_chamado} — <em>${c.descricao}</em>`;
+                    lista.appendChild(li);
+                });
+
+            } catch (err) {
+                console.error("Erro ao carregar atividades:", err);
+            }
+        }
+
+        carregarAtividades();
+
+        const modalConfirm = document.getElementById("modalConfirm");
+        window.abrirModalSaida = () => modalConfirm.style.display = "flex";
+        const fecharModalSaida = () => modalConfirm.style.display = "none";
+
+        document.getElementById("btnConfirmarSair").addEventListener("click", () => {
+            sessionStorage.removeItem("usuarioLogado");
+            window.location.href = "home.html";
         });
 
-    } catch (err) {
-        console.error("Erro ao carregar atividades:", err);
-    }
-}
+        document.getElementById("btnCancelarSair").addEventListener("click", fecharModalSaida);
 
-carregarAtividades();
+        window.addEventListener("click", e => {
+            if (e.target === modalConfirm) fecharModalSaida();
+        });
 
-// Modal de saída
-const modalConfirm = document.getElementById("modalConfirm");
-const btnConfirmarSair = document.getElementById("btnConfirmarSair");
-const btnCancelarSair = document.getElementById("btnCancelarSair");
+        const chatToggle = document.getElementById("chatToggle");
+        const chatModalBox = document.getElementById("chatModal");
+        const closeChatBtn = document.getElementById("closeChat");
+        const chatContainer = document.getElementById("chatBox");
+        const inputChat = document.getElementById("userInput");
+        const sendButton = document.getElementById("sendBtn");
 
-window.abrirModalSaida = () => modalConfirm.style.display = "flex";
-const fecharModalSaida = () => modalConfirm.style.display = "none";
+        chatToggle.addEventListener("click", () => {
+            chatModalBox.classList.toggle("hidden");
+        });
 
-btnConfirmarSair.addEventListener("click", () => {
-    sessionStorage.removeItem("usuarioLogado");
-    window.location.href = "home.html";
-});
+        closeChatBtn.addEventListener("click", () => {
+            chatModalBox.classList.add("hidden");
+        });
 
-btnCancelarSair.addEventListener("click", fecharModalSaida);
-window.addEventListener("click", e => {
-    if (e.target === modalConfirm) fecharModalSaida();
-});
-</script>
+        function addMessage(text, sender) {
+            const msg = document.createElement("div");
+            msg.className = "msg flex items-end gap-2";
+            msg.innerHTML = sender === "user"
+                ? `<div class="ml-auto bg-gray-200 text-gray-800 px-3 py-2 rounded-2xl max-w-[75%] text-sm">${text}</div>`
+                : `<img src="../assets/zehelp.png" class="w-7 h-7 rounded-full"><div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">${text}</div>`;
+
+            chatContainer.appendChild(msg);
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+        }
+
+        function showTyping() {
+            const typing = document.createElement("div");
+            typing.id = "typing";
+            typing.className = "msg flex items-end gap-2";
+            typing.innerHTML = `<img src="../assets/zehelp.png" class="w-7 h-7 rounded-full"><div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">digitando...</div>`;
+
+            chatContainer.appendChild(typing);
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+        }
+
+        function removeTyping() {
+            const typing = document.getElementById("typing");
+            if (typing) typing.remove();
+        }
+
+        sendButton.addEventListener("click", () => {
+            const text = inputChat.value.trim();
+            if (!text || sendButton.disabled) return;
+
+            addMessage(text, "user");
+            inputChat.value = "";
+            sendButton.disabled = true;
+            inputChat.disabled = true;
+            inputChat.blur();
+
+            showTyping();
+
+            fetch("https://localhost:7271/api/ia/chat", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ message: text, sessionId: "usuario-chat" })
+            })
+                .then(r => r.json())
+                .then(data => {
+                    removeTyping();
+                    addMessage(data.response || "Desculpe, não entendi sua mensagem 😢", "bot");
+                })
+                .catch(() => {
+                    removeTyping();
+                    addMessage("Ops! Algo deu errado ao falar com o assistente 🚨", "bot");
+                })
+                .finally(() => {
+                    sendButton.disabled = false;
+                    inputChat.disabled = false;
+                    inputChat.focus();
+                });
+        });
+
+        inputChat.addEventListener("keypress", e => {
+            if (e.key === "Enter") sendButton.click();
+        });
+
+        window.addEventListener("click", e => {
+            if (!chatContainer.contains(e.target) && e.target !== chatToggle) {
+                chatModalBox.classList.add("hidden");
+            }
+        });
+    </script>
 
 </body>
 </html>
