--- a/FrontChama/html/chamados.html
+++ b/FrontChama/html/chamados.html
@@ -32,14 +32,13 @@
 
             <!-- Menu superior -->
             <nav class="main-nav" aria-label="Menu principal">
-                <a class="nav-link active" href="faq.html">Central de Soluções</a>
+                <a class="nav-link" href="faq.html">Central de Soluções</a>
                 <a class="nav-link" href="artigos.html">Artigos & Documentos</a>
             </nav>
 
             <!-- Perfil -->
             <div class="profile-area" title="Perfil">
-                <i class="fa-solid fa-user-circle"></i>
-                <span id="tecnicoNome" class="ml-2 font-semibold"></span>
+                <a href="perfil.html"><i class="fa-solid fa-user-circle"></i></a>
             </div>
         </div>
     </header>
@@ -51,11 +50,7 @@
                 <li><a href="atividades.html" class="link-aviso"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
                 <li class="active"><a href="chamados.html" class="link-aviso"><i class="fa-solid fa-headset"></i> Chamados</a></li>
                 <li><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
-                <li>
-                    <a href="#" id="btnAbrirModalSaida">
-                        <i class="fa-solid fa-clipboard-list"></i> Sair
-                    </a>
-                </li>
+                <li><a href="#" onclick="abrirModalSaida()"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
             </ul>
         </aside>
 
@@ -121,7 +116,6 @@
                         </tr>
                     </thead>
                     <tbody class="chamado-tbody">
-                        
                     </tbody>
                 </table>
             </section>
@@ -129,7 +123,6 @@
             <!-- Modal Detalhes -->
             <div class="modal" id="modal">
                 <div class="modal-content">
-
                     <span class="close">&times;</span>
                     <h3>Detalhes do Chamado</h3>
                     <p><strong>ID:</strong> <span id="modal-id"></span></p>
@@ -144,29 +137,29 @@
         </main>
     </div>
 
-            <!-- MODAL DE EDIÇÃO -->
-            <div id="modalEditar" class="modal">
-              <div class="modal-content">
-               <button id="closeModalEditar" class="close-btn">&times;</button>
+    <!-- MODAL DE EDIÇÃO -->
+    <div id="modalEditar" class="modal">
+        <div class="modal-content">
+            <button id="closeModalEditar" class="close-btn">&times;</button>
 
-               <h3>Editar Chamado</h3>
+            <h3>Editar Chamado</h3>
 
-               <label>Categoria:</label>
-               <select id="editCategoria" class="input-select-categoria">
-                 <option value="2">TI</option>
-                 <option value="3">Equipamento</option>
-                 <option value="4">Infraestrutura</option>
-               </select>
+            <label>Categoria:</label>
+            <select id="editCategoria" class="input-select-categoria">
+                <option value="2">TI</option>
+                <option value="3">Equipamento</option>
+                <option value="4">Infraestrutura</option>
+            </select>
 
-                <label>Descrição:</label>
-                <textarea id="editDescricao" class="input-descricao-categoria"></textarea>
+            <label>Descrição:</label>
+            <textarea id="editDescricao" class="input-descricao-categoria"></textarea>
 
             <div class="modal-footer">
-            <button id="btnSalvarEdicao" class="btn-chamado">Salvar</button>
-            <button id="btnCancelarEdicao" class="btn-fechar">Cancelar</button>
+                <button id="btnSalvarEdicao" class="btn-chamado">Salvar</button>
+                <button id="btnCancelarEdicao" class="btn-fechar">Cancelar</button>
+            </div>
         </div>
     </div>
-</div>
 
     <!-- botão e chat flutuante -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -183,6 +176,7 @@
             </div>
             <button id="closeChat" class="text-lg font-bold hover:text-red-400 transition">×</button>
         </header>
+
         <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
             <div class="msg flex items-end gap-2">
                 <img src="../assets/zehelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
@@ -191,6 +185,7 @@
                 </div>
             </div>
         </main>
+
         <div class="flex items-center gap-2 border-t border-gray-200 p-2 bg-white">
             <input id="userInput" type="text" placeholder="Digite sua mensagem..." class="flex-1 border border-gray-300 rounded-full px-3 py-1.5 text-sm focus:outline-none focus:ring-2 focus:ring-[#3B82F6]">
             <button id="sendBtn" class="bg-[#3B82F6] text-white px-4 py-1.5 rounded-full text-sm hover:bg-[#1E40AF] transition">Enviar</button>
