--- a/FrontChama/html/login.html
+++ b/FrontChama/html/login.html
@@ -26,7 +26,7 @@
 
     <div class="login-container flex bg-white shadow-xl rounded-2xl overflow-hidden animate-fadeIn">
 
-        <!-- Left Section -->
+        <!-- Sessão esquerda -->
         <div class="left-panel bg-[#2F374C] text-white flex flex-col justify-center p-10 w-2/5">
             <div class="text-left mb-10">
                 <h2 class="text-3xl font-bold mb-4">Bem-vindo!</h2>
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <!-- Right Section - Login -->
+        <!-- Sessão lado direito - Login -->
         <div class="right-panel bg-white flex flex-col justify-center items-center p-20 w-3/5 relative transition-all duration-500" id="loginSection">
 
             <button id="btnVoltar" class="absolute top-5 left-5 text-[#2F374C] hover:scale-110 transition"
@@ -53,7 +53,7 @@
                 </svg>
             </button>
 
-            <!-- Logo do Projeto -->
+            <!-- Logo -->
             <img src="../assets/logo.png" alt="Logo do Projeto" class="w-20 mb-3 animate-bounce-slow">
 
             <h2 class="text-2xl font-semibold text-[#2F374C] mb-6">Login</h2>
@@ -69,16 +69,16 @@
             <div class="relative w-full mb-6">
                 <input type="password" id="senha" placeholder="Digite a sua senha..."
                        class="w-full p-3 bg-[#EDEDED] rounded-md outline-none transition-all pr-10" />
-                       
+
                 <!--Mostrar/Ocultar senha-->
                 <button type="button" id="toggleSenha"
                     aria-label="Alternar visibilidade da senha"
                         class="absolute right-3 top-1/2 transform -translate-y-1/2 text-[#2F374C] hidden">
-                     <svg id="iconSenha" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
+                    <svg id="iconSenha" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
                        stroke="#2F374C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M1 10s4-7 9-7 9 7 9 7-4 7-9 7-9-7-9-7z"/>
                         <circle cx="10" cy="10" r="3"/>
-                     </svg>
+                    </svg>
                 </button>
 
                 <p id="erroSenha" class="text-red-500 text-sm mt-1 hidden">Preencha a senha</p>
@@ -113,8 +113,11 @@
             <input type="text" id="regFunc" placeholder="Digite sua funcional..." class="w-72 mb-4 p-3 bg-[#EDEDED] rounded-md outline-none focus:ring-2 focus:ring-[#57607A] transition-all" />
             <input type="password" id="regPass" placeholder="Crie sua senha..." class="w-72 mb-6 p-3 bg-[#EDEDED] rounded-md outline-none focus:ring-2 focus:ring-[#57607A] transition-all" />
 
-            <button id="btnSalvarCadastro" class="bg-[#2F374C] text-white px-8 py-2 rounded-full hover:opacity-90 transition-all">SALVAR</button>
+            <button id="btnSalvarCadastro" class="bg-[#2F374C] text-white px-8 py-2 rounded-full hover:opacity-90 transition-all">
+                SALVAR
+            </button>
         </div>
+
     </div>
 
     <!-- JS -->
